force-app/main/default/objects/Product2/fields/CW_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Product_Type__c</fullName>
    <inlineHelpText>Indicates the type of the product</inlineHelpText>
    <label>Product Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>