force-app/main/default/objects/Product2/fields/CWS_1_TIER_Standard_Contract_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_1_TIER_Standard_Contract_Discount__c</fullName>
    <inlineHelpText>Captures the discount for the 1-Tier Standard Scenario</inlineHelpText>
    <label>1-TIER Standard Contract Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>