force-app/main/default/objects/Product2/fields/CWS_2_TIER_Deal_Reg_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_2_TIER_Deal_Reg_Discount__c</fullName>
    <inlineHelpText>Captures the discount for the 2-Tier Deal Reg Scenario</inlineHelpText>
    <label>2-TIER Deal Reg Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>