force-app/main/default/objects/Product2/fields/CWS_3rd_Party_MM__c.field-meta.xml
<CustomField>
    <fullName>CWS_3rd_Party_MM__c</fullName>
    <label>3rd Party M-M</label>
    <length>255</length>
    <type>Text</type>
</CustomField>