force-app/main/default/objects/Product2/fields/CWS_Add_On_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Add_On_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the product can&apos;t be added in a New Business quote</inlineHelpText>
    <label>Add-On SKU</label>
    <type>Checkbox</type>
</CustomField>