force-app/main/default/objects/Product2/fields/CWS_Additional_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Restrictions__c</fullName>
    <inlineHelpText>Indicates the additional restriction at the time of provisioning</inlineHelpText>
    <label>Additional Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Additional_Restrictions</valueSetName>
    </valueSet>
</CustomField>