force-app/main/default/objects/Product2/fields/CWS_Automate_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Automate_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automate Quantity Approval Required.</description>
    <inlineHelpText>Automate Quantity Approval Required.</inlineHelpText>
    <label>Automate Product</label>
    <type>Checkbox</type>
</CustomField>