force-app/main/default/objects/Product2/fields/CWS_Average_Service_Days__c.field-meta.xml
<CustomField>
    <fullName>CWS_Average_Service_Days__c</fullName>
    <label>Average Service Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>