force-app/main/default/objects/Product2/fields/CWS_Average_Service_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Average_Service_Term__c</fullName>
    <inlineHelpText>Indicates the term (in months) over which the revenue for the product will be recognized. Sent down to NetSuite</inlineHelpText>
    <label>Average Service Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>