force-app/main/default/objects/Product2/fields/CWS_Avg_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>CWS_Avg_Number_of_Days__c</fullName>
    <inlineHelpText>Indicates the average number of day required to provision the product</inlineHelpText>
    <label>Avg Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>