force-app/main/default/objects/Product2/fields/CWS_Base__c.field-meta.xml
<CustomField>
    <fullName>CWS_Base__c</fullName>
    <label>Base</label>
    <length>100</length>
    <type>Text</type>
</CustomField>