force-app/main/default/objects/Product2/fields/CWS_Base_MASTER_SKU_Short__c.field-meta.xml
<CustomField>
    <fullName>CWS_Base_MASTER_SKU_Short__c</fullName>
    <inlineHelpText>Captures the legacy Master Base SKU for the product</inlineHelpText>
    <label>Base MASTER SKU Short</label>
    <length>100</length>
    <type>Text</type>
</CustomField>