force-app/main/default/objects/Product2/fields/CWS_Base_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Base_SKU__c</fullName>
    <inlineHelpText>Captures the legacy Base SKU for the product</inlineHelpText>
    <label>Base SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>