force-app/main/default/objects/Product2/fields/CWS_Billing_Only__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Only</label>
    <type>Checkbox</type>
</CustomField>