force-app/main/default/objects/Product2/fields/CWS_Billing_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Term__c</fullName>
    <inlineHelpText>Indicates the applicable billing term for the product</inlineHelpText>
    <label>Billing Term</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Tri-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>