force-app/main/default/objects/Product2/fields/CWS_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Brand_Name__c</fullName>
    <inlineHelpText>Indicates the Brand Name of the product</inlineHelpText>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>