force-app/main/default/objects/Product2/fields/CWS_Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bundle_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Product</label>
    <type>Checkbox</type>
</CustomField>