force-app/main/default/objects/Product2/fields/CWS_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bundle_Type__c</fullName>
    <inlineHelpText>Indicates if the product is a package, bundle, standalone or component of a bundle</inlineHelpText>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Bundle</fullName>
            </value>
            <value>
                <fullName>Bundle Component</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>