force-app/main/default/objects/Product2/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <inlineHelpText>Indicates the Category of the product</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>