force-app/main/default/objects/Product2/fields/CWS_Charge_Model__c.field-meta.xml
<CustomField>
    <fullName>CWS_Charge_Model__c</fullName>
    <description>Depicts Zuora charge Model</description>
    <inlineHelpText>Indicates the Charge Model of the product</inlineHelpText>
    <label>Charge Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount-Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Discount-Percentage</fullName>
            </value>
            <value>
                <fullName>Flat Fee Pricing</fullName>
            </value>
            <value>
                <fullName>Per Unit Pricing</fullName>
            </value>
            <value>
                <fullName>Overage Pricing</fullName>
            </value>
            <value>
                <fullName>Tiered Pricing</fullName>
            </value>
            <value>
                <fullName>Tiered with Overage Pricing</fullName>
            </value>
            <value>
                <fullName>Volume Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>