force-app/main/default/objects/Product2/fields/CWS_ChargeType__c.field-meta.xml
<CustomField>
    <fullName>CWS_ChargeType__c</fullName>
    <inlineHelpText>Indicates the Charge Type of the product</inlineHelpText>
    <label>Billing Charge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Billing_Charge_Type</valueSetName>
    </valueSet>
</CustomField>