force-app/main/default/objects/Product2/fields/CWS_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Cost_Price__c</fullName>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>