force-app/main/default/objects/Product2/fields/CWS_Create_Revenue_Plan_On__c.field-meta.xml
<CustomField>
    <fullName>CWS_Create_Revenue_Plan_On__c</fullName>
    <label>Create Revenue Plan On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Revenue Arrangement Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>