force-app/main/default/objects/Product2/fields/CWS_Currencies__c.field-meta.xml
<CustomField>
    <fullName>CWS_Currencies__c</fullName>
    <inlineHelpText>Indicates the applicable currencies for the product</inlineHelpText>
    <label>Currencies</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>