force-app/main/default/objects/Product2/fields/CWS_Currencies_Billing_Only__c.field-meta.xml
<CustomField>
    <fullName>CWS_Currencies_Billing_Only__c</fullName>
    <inlineHelpText>Indicates the currencies from which a Active/Billing Only product behave as an Billing Only Product</inlineHelpText>
    <label>Currencies (Billing Only)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>