force-app/main/default/objects/Product2/fields/CWS_Custom_SOW__c.field-meta.xml
<CustomField>
    <fullName>CWS_Custom_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom SOW</label>
    <type>Checkbox</type>
</CustomField>