force-app/main/default/objects/Product2/fields/CWS_CW_CT__c.field-meta.xml
<CustomField>
    <fullName>CWS_CW_CT__c</fullName>
    <description>to differenciate the CT and CW  products</description>
    <label>CW/CT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>