force-app/main/default/objects/Product2/fields/CWS_Deferred_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CWS_Deferred_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deferred Eligible</label>
    <type>Checkbox</type>
</CustomField>