force-app/main/default/objects/Product2/fields/CWS_Deferred_Product_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Deferred_Product_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if a product is eligible for deferment</inlineHelpText>
    <label>Deferred Product Eligibility</label>
    <type>Checkbox</type>
</CustomField>