force-app/main/default/objects/Product2/fields/CWS_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Description__c</fullName>
    <description>This field captures the long description of the product</description>
    <inlineHelpText>Captures the description of the product</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>