force-app/main/default/objects/Product2/fields/CWS_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discount_Percentage__c</fullName>
    <inlineHelpText>Indicates the discount percentage which wouldn&apos;t trigger approval for the product</inlineHelpText>
    <label>Max Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>