force-app/main/default/objects/Product2/fields/CWS_EF_Attribute__c.field-meta.xml
<CustomField>
    <fullName>CWS_EF_Attribute__c</fullName>
    <inlineHelpText>Indicates the Product Type that is used to derive Disti Factor and Economic Factor value at quote lines</inlineHelpText>
    <label>EF Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_EF_Attribute</valueSetName>
    </valueSet>
</CustomField>