force-app/main/default/objects/Product2/fields/CWS_Free_Units__c.field-meta.xml
<CustomField>
    <fullName>CWS_Free_Units__c</fullName>
    <inlineHelpText>Captures the Free Units of the product</inlineHelpText>
    <label>Free Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>