force-app/main/default/objects/Product2/fields/CWS_GL_Deferred_ST__c.field-meta.xml
<CustomField>
    <fullName>CWS_GL_Deferred_ST__c</fullName>
    <label>GL Deferred ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>