force-app/main/default/objects/Product2/fields/CWS_GL_Deferred_ST_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_GL_Deferred_ST_Name__c</fullName>
    <label>GL Deferred ST Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>