force-app/main/default/objects/Product2/fields/CWS_Hide_on_OrderForm__c.field-meta.xml
<CustomField>
    <fullName>CWS_Hide_on_OrderForm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the product will be printed in the order form</inlineHelpText>
    <label>Hide on OrderForm</label>
    <type>Checkbox</type>
</CustomField>