force-app/main/default/objects/Product2/fields/CWS_Ignore_Proration__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ignore_Proration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Proration</label>
    <type>Checkbox</type>
</CustomField>