force-app/main/default/objects/Product2/fields/CWS_Immediate_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>CWS_Immediate_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if a product is provisioned immediately or manually</inlineHelpText>
    <label>Immediate Provisioning</label>
    <type>Checkbox</type>
</CustomField>