force-app/main/default/objects/Product2/fields/CWS_Implementation_Spread_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Implementation_Spread_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if a product is eligible for spread</inlineHelpText>
    <label>Spread Eligible</label>
    <type>Checkbox</type>
</CustomField>