force-app/main/default/objects/Product2/fields/CWS_Include_In_Minimum_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Include_In_Minimum_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the product is a Usage product and is applicable for minimum commit calculation</description>
    <inlineHelpText>Indicates if the product is eligible for legacy minimum commit</inlineHelpText>
    <label>Include In Minimum Commit</label>
    <type>Checkbox</type>
</CustomField>