force-app/main/default/objects/Product2/fields/CWS_Included_Units__c.field-meta.xml
<CustomField>
    <fullName>CWS_Included_Units__c</fullName>
    <inlineHelpText>Captures the Included Units of the product</inlineHelpText>
    <label>Included Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>