force-app/main/default/objects/Product2/fields/CWS_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Integration_Error__c</fullName>
    <description>Integration error field: To stamp the error code/description if sync fails in Netsuite/Zuora.</description>
    <inlineHelpText>Error code/description if sync fails in Netsuite/Zuora.</inlineHelpText>
    <label>Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>