force-app/main/default/objects/Product2/fields/CWS_INVOICE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>CWS_INVOICE_DESCRIPTION__c</fullName>
    <inlineHelpText>Captures the description that will be captured in the invoice for the product</inlineHelpText>
    <label>INVOICE DESCRIPTION</label>
    <length>200</length>
    <type>Text</type>
</CustomField>