force-app/main/default/objects/Product2/fields/CWS_Item_Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Item_Revenue_Category__c</fullName>
    <inlineHelpText>Captures Item Revenue Category for the product. NetSuite uses this value to auto-populate revenue attributes at item level.</inlineHelpText>
    <label>Item Revenue Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>On-Prem Term Assurance</fullName>
            </value>
            <value>
                <fullName>On-Prem Term Manage</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Evolve-Billing</fullName>
            </value>
            <value>
                <fullName>Consulting-Services</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Core Services</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Billing</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Evolve-Core Services</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Implementation-Core Services</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Implementation-Billing</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Recurring-Core Services</fullName>
            </value>
            <value>
                <fullName>Consulting-Services-Recurring-Billing</fullName>
            </value>
            <value>
                <fullName>Consulting-SaaS-Billing</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Hybrid SaaS-Core Services</fullName>
            </value>
            <value>
                <fullName>Maintenance-Core Services</fullName>
            </value>
            <value>
                <fullName>Maintenance-Billing</fullName>
            </value>
            <value>
                <fullName>Other-Billing</fullName>
            </value>
            <value>
                <fullName>Other-Invent-Core Services</fullName>
            </value>
            <value>
                <fullName>Other-Invent-Billing</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Perpetual-Core Services</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>SaaS-Third Party</fullName>
            </value>
            <value>
                <fullName>SaaS-Core Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>