force-app/main/default/objects/Product2/fields/CWS_Legacy_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Category__c</fullName>
    <inlineHelpText>Indicates the category that is used to derive Disti Factor value at quote lines Not to be used in place of &quot;category&quot;</inlineHelpText>
    <label>Legacy Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Legacy_Category</valueSetName>
    </valueSet>
</CustomField>