force-app/main/default/objects/Product2/fields/CWS_Legacy_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Continuum</description>
    <inlineHelpText>Captures the Legacy SKU of the product</inlineHelpText>
    <label>Legacy SKU</label>
    <type>Checkbox</type>
</CustomField>