force-app/main/default/objects/Product2/fields/CWS_legacy_Zuora_rate_plan_charge_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_legacy_Zuora_rate_plan_charge_ID__c</fullName>
    <description>legacy Zuora rate plan charge ID</description>
    <inlineHelpText>legacy Zuora rate plan charge ID</inlineHelpText>
    <label>legacy Zuora rate plan charge ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>