force-app/main/default/objects/Product2/fields/CWS_License_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_License_Type__c</fullName>
    <inlineHelpText>Indicates the License Type of the product</inlineHelpText>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_LicenseType</valueSetName>
    </valueSet>
</CustomField>