force-app/main/default/objects/Product2/fields/CWS_Long_Description_Link__c.field-meta.xml
<CustomField>
    <fullName>CWS_Long_Description_Link__c</fullName>
    <inlineHelpText>Captures the link to product&apos;s webpage</inlineHelpText>
    <label>Long Description Link</label>
    <type>Url</type>
</CustomField>