force-app/main/default/objects/Product2/fields/CWS_Manage_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field used in Approval rules to specify if Default Quantity approval is required for this Product.</description>
    <inlineHelpText>Checkbox field used in Approval rules to specify if Default Quantity approval is required for this Product.</inlineHelpText>
    <label>Manage Product</label>
    <type>Checkbox</type>
</CustomField>