force-app/main/default/objects/Product2/fields/CWS_Manage_Special_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Special_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manage Special Quantity Approval Required.</description>
    <inlineHelpText>Manage Special Quantity Approval Required.</inlineHelpText>
    <label>Manage Special Product</label>
    <type>Checkbox</type>
</CustomField>