force-app/main/default/objects/Product2/fields/CWS_Mapped_Charge__c.field-meta.xml
<CustomField>
    <fullName>CWS_Mapped_Charge__c</fullName>
    <inlineHelpText>Captures Mapped Charge for this product. Used in Disconting Workflow ($ based) in Zuora</inlineHelpText>
    <label>Mapped Charge</label>
    <length>150</length>
    <type>Text</type>
</CustomField>