force-app/main/default/objects/Product2/fields/CWS_Marketplace_Brand__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketplace_Brand__c</fullName>
    <inlineHelpText>Captures the MarketPlace brand for the product</inlineHelpText>
    <label>Marketplace Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>