force-app/main/default/objects/Product2/fields/CWS_MarketPlace_Only_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_MarketPlace_Only_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product is visible in the Marketplace Only</inlineHelpText>
    <label>MarketPlace Only SKU</label>
    <type>Checkbox</type>
</CustomField>