force-app/main/default/objects/Product2/fields/CWS_MarketPlace_Only_SKU_BILLING_ONLY__c.field-meta.xml
<CustomField>
    <fullName>CWS_MarketPlace_Only_SKU_BILLING_ONLY__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the product is Billing Only in MarketPlace</inlineHelpText>
    <label>MarketPlace Only SKU BILLING ONLY</label>
    <type>Checkbox</type>
</CustomField>