force-app/main/default/objects/Product2/fields/CWS_MarketPlace_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_MarketPlace_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag to indicate if product is visible in the Marketplace in addition to quoting</inlineHelpText>
    <label>MarketPlace SKU</label>
    <type>Checkbox</type>
</CustomField>