force-app/main/default/objects/Product2/fields/CWS_Marketplace_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketplace_Sub_Type__c</fullName>
    <inlineHelpText>Indicates the Sub-Type of the product</inlineHelpText>
    <label>Marketplace Sub Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>