force-app/main/default/objects/Product2/fields/CWS_Marketplace_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Marketplace_Type__c</fullName>
    <inlineHelpText>Indicates the Type of Product</inlineHelpText>
    <label>Marketplace Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>