force-app/main/default/objects/Product2/fields/CWS_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit__c</fullName>
    <description>Price Rule: Min Commit to be default on Quoteline.</description>
    <formula>CWS_Minimum_Commit_Eligibility__c &amp;&amp;  TEXT(CWS_ChargeType__c)=&apos;Usage&apos;</formula>
    <inlineHelpText>Price Rule: Min Commit to be default on Quoteline.</inlineHelpText>
    <label>Min Commit</label>
    <type>Checkbox</type>
</CustomField>