force-app/main/default/objects/Product2/fields/CWS_Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Quantity__c</fullName>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>