force-app/main/default/objects/Product2/fields/CWS_Minimum_Commit_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Minimum_Commit_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the product is compatible for Minimum Commit Quantity</inlineHelpText>
    <label>Minimum Commit Eligibility</label>
    <type>Checkbox</type>
</CustomField>