force-app/main/default/objects/Product2/fields/CWS_MM_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_MM_Uplift__c</fullName>
    <inlineHelpText>Captures the uplift % for IIT scenario</inlineHelpText>
    <label>MM Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>