force-app/main/default/objects/Product2/fields/CWS_MP_Tier_Qty_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_MP_Tier_Qty_Type__c</fullName>
    <inlineHelpText>Indicates Marketplace tier qty type (GB, TB, etc)</inlineHelpText>
    <label>MP Tier Qty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_MP_Tier_Valueset</valueSetName>
    </valueSet>
</CustomField>