force-app/main/default/objects/Product2/fields/CWS_NetSuite_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuite_Internal_Id__c</fullName>
    <description>NetSuite Internal Product Id</description>
    <inlineHelpText>Captures NetSuite Internal Id</inlineHelpText>
    <label>NetSuite Internal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>