force-app/main/default/objects/Product2/fields/CWS_NetSuite_Last_Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuite_Last_Synced_Date__c</fullName>
    <description>Field to be stamped with date and timestamp based on successful syncing with Netsuite</description>
    <inlineHelpText>Indicates the last time the product was Synced to NetSuite</inlineHelpText>
    <label>NetSuite Last Synced Date</label>
    <type>DateTime</type>
</CustomField>