force-app/main/default/objects/Product2/fields/CWS_NetSuite_Product_Available__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetSuite_Product_Available__c</fullName>
    <description>Field to be used as indicator to mark product is ready for integration Will be set to TRUE if all the mandatory fields to be send to netsuite/zuora are populated.</description>
    <formula>AND(IsActive,NOT(ISBLANK(TEXT(CWS_Sub_Category__c))), NOT(ISBLANK(CWS_ProductCode__c)), NOT(ISBLANK(TEXT(CWS_License_Type__c))),
NOT(ISBLANK(TEXT(CWS_ChargeType__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the product is ready to be integrated with Zuora after all required fields are populated</inlineHelpText>
    <label>NetSuite Product Available</label>
    <type>Checkbox</type>
</CustomField>